--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     <!--    Don't eat yellow snow!-->
 </head>
 <body>
-<h1>ШИФРАТОР</h1>
-<h2>Формат: ROT13</h2>
-<section class="forms-container">
-    <div class="encrypt-div">
-        <label for="user_text">Текст для шифровки</label>
-        <textarea id="user_text" class="main-text-area" placeholder="Введите текст..."></textarea>
-        <button type="submit" onclick="{
+<div id="#page-wrapper" class="page-wrapper">
+    <h1>ДЕ/ШИФРАТОР</h1>
+    <h2>Формат: ROT13</h2>
+    <section class="forms-container">
+        <div class="encrypt-div">
+            <label for="user_text">Текст для шифровки</label>
+            <textarea id="user_text" class="main-text-area" placeholder="Введите текст..."></textarea>
+            <button type="submit" onclick="{
         let textArea = document.querySelector('#user_text');
         let outputDiv = document.querySelector('#output-div')
         if (textArea.value !== '') {
@@ -38,22 +39,33 @@
         }
         else outputDiv.style.visibility = 'collapse';
     }">Зашифровать
-        </button>
-    </div>
+            </button>
+        </div>
 
-    <div id="output-div" class="encrypt-div" style="visibility:collapse;">
-        <label>Готовый текст:</label>
-        <p id="output-text" class="main-text-area"></p>
-        <button onclick="{
+        <div id="output-div" class="encrypt-div" style="visibility:collapse;">
+            <label>Готовый шифр:</label>
+            <p id="output-text" class="main-text-area"></p>
+            <button onclick="{
         const readyText = document.querySelector('#output-text');
         navigator.clipboard.writeText(readyText.innerText).then(() => {
-            this.innerHTML = 'Good Job, Boss!';
+            this.innerHTML = 'Скопировано, Босс!';
             setTimeout(() => this.innerHTML = 'Скопировать', 1666);
         });
-    }">Скопировать</button>
-    </div>
-</section>
-
-
+    }">Скопировать
+            </button>
+        </div>
+    </section>
+    <section class="info-container">
+        <img src="/assets/cyberpunk.png" alt="Encrypt Image">
+        <p class="description">ROT13 — это простой шифр подстановки, который заменяет каждую букву алфавита на 13-ю по счёту после неё:<br>(A →
+            N, B → O, ..., M → Z, N → A и т. д.). <br><br>Он работает только с латинскими буквами, а цифры и символы оставляет
+            без изменений. <br><br>Особенность ROT13 в том, что это обратимый шифр: повторное применение ROT13 возвращает
+            исходный текст. Изначально он использовался в интернете для сокрытия спойлеров и шуток, а не для реальной
+            защиты данных.</p>
+    </section>
+</div>
+<footer>
+    <p class="year">2O25</p>
+</footer>
 </body>
 </html>
