--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <script src="js/app.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap"
           rel="stylesheet">
+
+    <link rel="stylesheet" href="css/color.css">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <script src="js/app.js"></script>
 
     <title>Sergey Rem</title>
 
@@ -22,50 +25,70 @@
 </head>
 <body>
 <div id="#page-wrapper" class="page-wrapper">
-    <h1>ДЕ/ШИФРАТОР</h1>
+    <h1>ДЕ<span class="pink">/</span>ШИФРАТОР</h1>
     <h2>Формат: ROT13</h2>
-    <section class="forms-container">
-        <div class="encrypt-div">
-            <label for="user_text">Текст для шифровки</label>
-            <textarea id="user_text" class="main-text-area" placeholder="Введите текст..."></textarea>
-            <button type="submit" onclick="{
-        let textArea = document.querySelector('#user_text');
-        let outputDiv = document.querySelector('#output-div')
-        if (textArea.value !== '') {
-            let outputText = document.querySelector('#output-text');
+    <div>
+        <section id="forms" class="forms-container">
+            <div class="circles">
+                <svg class="circle" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="6" cy="6" r="6"/>
+                </svg>
+                <svg class="circle yellow" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="6" cy="6" r="6"/>
+                </svg>
+                <svg class="circle green" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="6" cy="6" r="6"/>
+                </svg>
 
-            outputDiv.style.visibility = 'visible';
-            outputText.innerText = encrypt_ROT13(textArea.value);
-        }
-        else outputDiv.style.visibility = 'collapse';
-    }">Зашифровать
-            </button>
-        </div>
+                <svg class="circle black" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://t.me/mechv0d" target="_blank" rel="noopener noreferrer">
+                        <circle cx="6" cy="6" r="6"/>
+                    </a>
+                </svg>
 
-        <div id="output-div" class="encrypt-div" style="visibility:collapse;">
-            <label>Готовый шифр:</label>
-            <p id="output-text" class="main-text-area"></p>
-            <button onclick="{
-        const readyText = document.querySelector('#output-text');
-        navigator.clipboard.writeText(readyText.innerText).then(() => {
-            this.innerHTML = 'Скопировано, Босс!';
-            setTimeout(() => this.innerHTML = 'Скопировать', 1666);
-        });
-    }">Скопировать
-            </button>
-        </div>
-    </section>
+            </div>
+            <div class="line">
+                <div class="encrypt-div">
+                    <label for="user_text">Текст для шифровки</label>
+                    <textarea id="user_text" class="main-text-area" placeholder="Введите текст..."></textarea>
+                    <button type="submit" onclick="submitButtonLogic(this)">Зашифровать
+                    </button>
+                </div>
+                <div id="output-div" class="encrypt-div" style="visibility:collapse;">
+                    <label>Готовый шифр:</label>
+                    <p id="output-text" class="main-text-area"></p>
+                    <button onclick="copyButtonLogic(this)">Скопировать
+                    </button>
+                </div>
+            </div>
+            <div id="operations-info" class="line alphabet-info">
+                <p class="alphabet">Алфавит: A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+                <div class="op-count">
+                    <p id="op-all">Операций:</p>
+                    <p id="op-proceed">Выполнено:</p>
+                    <p id="op-skip">Пропущено:</p>
+                </div>
+                <div id="op-list" class="op-list">
+                </div>
+
+            </div>
+        </section>
+    </div>
+
     <section class="info-container">
-        <img src="/assets/cyberpunk.png" alt="Encrypt Image">
-        <p class="description">ROT13 — это простой шифр подстановки, который заменяет каждую букву алфавита на 13-ю по счёту после неё:<br>(A →
-            N, B → O, ..., M → Z, N → A и т. д.). <br><br>Он работает только с латинскими буквами, а цифры и символы оставляет
-            без изменений. <br><br>Особенность ROT13 в том, что это обратимый шифр: повторное применение ROT13 возвращает
+        <img src="/assets/cyberpunk.png" alt="Encrypt Image" draggable="false">
+        <p class="description">ROT13 — это простой шифр подстановки, который заменяет каждую букву алфавита на 13-ю по
+            счёту после неё:<br>(A →
+            N, B → O, ..., M → Z, N → A и т. д.). <br><br>Он работает только с латинскими буквами, а цифры и символы
+            оставляет
+            без изменений. <br><br>Особенность ROT13 в том, что это обратимый шифр: повторное применение ROT13
+            возвращает
             исходный текст. Изначально он использовался в интернете для сокрытия спойлеров и шуток, а не для реальной
             защиты данных.</p>
     </section>
 </div>
 <footer>
-    <p class="year">2O25</p>
+    <p class="year">mechv0d · 2O25</p>
 </footer>
 </body>
 </html>
