Iteration 3 (Lab 2 work)

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <script src="js/app.js"></script>
 
-    <title>Sergey Rem</title>
+    <title>ДЕ/ШИФРАТОР</title>
 
     <!--    this work belongs to the student of 1ISP-21 Rem Sergey.-->
     <!--    All rights reserved.-->
